kubernetes/main/components/dragonfly/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: &app ${APP}-dragonfly-db
  name: ${APP}-dragonfly-db-observability
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/instance: kube-prometheus-stack
      ports:
        - port: 9999
          protocol: TCP
  podSelector:
    matchLabels:
      app: *app
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
